# notes

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 96644b538459_short_url.py  b881040fa79d_initial_migration.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: images.py  notes.py  tags.py
app/core/: config.py  exceptions.py
app/db/: base.py  session.py
app/db/repositories/: base.py  image.py  note.py  tag.py
app/models/: associations.py  image.py  note.py  tag.py
app/schemas/: image.py  note.py  tag.py
app/services/: base.py  image.py  note.py  tag.py
app/storage/: minio.py
app/utils/: url.py
docs/: api.md  architecture.md  deployment.md  development.md  frontend.md
src/: main.py
